# Chess

./: CMakeLists.txt
CMake/: CompilerDiagnostics.cmake  CompilerSettings.cmake  Libraries.cmake  PreCompiledHeaders.cmake  Version.cmake
Source/: CMakeLists.txt  CalculatePossibleMoves.cpp  CalculatePossibleMoves.hpp  Piece.hpp  main.cpp
